src/wiki-parser/java/org/wyona/wiki/WikiParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. WikiParser.java */
package org.wyona.wiki;

import java.util.Iterator;
import java.util.Set;

/**
*
*
*/
public class WikiParser/*@bgen(jjtree)*/implements WikiParserTreeConstants, WikiParserConstants {/*@bgen(jjtree)*/
  protected static JJTWikiParserState jjtree = new JJTWikiParserState();
        // needed for XML Header
        static boolean show = true;
        /**
	*
	*/
    public static void main(String args[]) {

        System.out.println("Enter Wiki-Markup:");

        WikiParser t = new WikiParser(System.in);
        try {
            SimpleNode n = t.WikiBody();
            //n.dump("");            
                        debugNodeTree(n, 0);
        } catch (Exception e) {
            System.out.println("Oops.");
            System.out.println(e.getMessage());
            e.printStackTrace();
        }
    }

    /**
    * 	This method will output the node tree to the console.
    */
    public static void debugNodeTree(SimpleNode node, int depth) {
                SimpleNode n = node;
                for (int i=0; i<depth; i++)
                        System.out.print(" ");
                        System.out.print(n.toString());
                if (!node.optionMap.isEmpty()) {
            Set keySet = node.optionMap.keySet();
            Iterator kit = keySet.iterator();
            while (kit.hasNext()) {
                Object option = kit.next();
                Object value = node.optionMap.get(option);
                System.out.print(":" + option.toString() + "=" + value.toString());
            }
        }
        System.out.println();
        if (n.jjtGetNumChildren() > 0) {
            for (int i = 0; i < n.jjtGetNumChildren(); i++) {
                debugNodeTree((SimpleNode)node.jjtGetChild(i), depth + 1);
            }
        }
    }

    /**
    * This method generates XML output.
    */
    public static void traverseXML(SimpleNode node, int depth) {


        SimpleNode n = node;

                // display once header!
                if (show) {
                        System.out.println("<?xml version=\"1.0\" encoding=\"UTF-8\"?>");
                        show = false;
                }


        for (int i=0; i<depth; i++)
                        System.out.print(" ");

                        if (n.jjtGetNumChildren() > 0) {
                        System.out.print("<" + n.toString() + ">");
                        }
                        else {
                                System.out.print("<" + n.toString() + " value = ");
                        }

                        if (!node.optionMap.isEmpty()) {
            Set keySet = node.optionMap.keySet();
            Iterator kit = keySet.iterator();
                while (kit.hasNext()) {
                        Object option = kit.next();
                        Object value = node.optionMap.get(option);
                        System.out.print("\"" + value.toString()+ "\"" + "/>");
                }
                }

                System.out.println();
        if (n.jjtGetNumChildren() > 0) {

            for (int i = 0; i < n.jjtGetNumChildren(); i++) {
                traverseXML((SimpleNode)node.jjtGetChild(i), depth + 1);
            }
                for (int i=0; i<depth; i++)
                        System.out.print(" ");

                        System.out.print("</" + n.toString() + ">" +"\n");
        }
    }

/** Actions */
  static final public SimpleNode WikiBody() throws ParseException {
                         /*@bgen(jjtree) WikiBody */
  SimpleNode jjtn000 = new SimpleNode(JJTWIKIBODY);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case BOLD:
        case ITALIC:
        case UNDERLINE:
        case NOTAGS_EOL:
        case NOTAGS_BOLD:
        case NOTAGS_ITALIC:
        case NOTAGS_UNDERLINE:
        case NOTAGS_FORCE_NEWLINE:
        case NOTAGS_ANY_CHAR:
        case HRULE:
        case TABLE:
        case TABLE_TABLE:
        case TABLE_BOLD:
        case TABLE_ITALIC:
        case TABLE_UNDERLINE:
        case TABLE_FORCE_NEWLINE:
        case TABLE_ANY_CHAR:
        case LIST:
        case LIST_BOLD:
        case LIST_ITALIC:
        case LIST_UNDERLINE:
        case LIST_FORCE_NEWLINE:
        case TITLE:
        case TITLE_BOLD:
        case TITLE_ITALIC:
        case TITLE_UNDERLINE:
        case TITLE_FORCE_NEWLINE:
        case TITLE_ANY_CHAR:
        case START_PLAIN:
        case FORCE_NEWLINE:
        case EOL:
        case ANY_CHAR:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        if (jj_2_1(2)) {
          Paragraph();
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case EOL:
            jj_consume_token(EOL);
            break;
          case NOTAGS_EOL:
            jj_consume_token(NOTAGS_EOL);
            break;
          default:
            jj_la1[1] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
      jj_consume_token(0);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
                {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

/** Paragraph */
  static final public void Paragraph() throws ParseException {
                    /*@bgen(jjtree) Paragraph */
  SimpleNode jjtn000 = new SimpleNode(JJTPARAGRAPH);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_2:
      while (true) {
        if (jj_2_2(10)) {
          Plain();
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case NOTAGS_ANY_CHAR:
          case TABLE_ANY_CHAR:
          case TITLE_ANY_CHAR:
          case ANY_CHAR:
            Text();
            break;
          case BOLD:
          case NOTAGS_BOLD:
          case TABLE_BOLD:
          case LIST_BOLD:
          case TITLE_BOLD:
            Bold();
            break;
          case ITALIC:
          case NOTAGS_ITALIC:
          case TABLE_ITALIC:
          case LIST_ITALIC:
          case TITLE_ITALIC:
            Italic();
            break;
          case UNDERLINE:
          case NOTAGS_UNDERLINE:
          case TABLE_UNDERLINE:
          case LIST_UNDERLINE:
          case TITLE_UNDERLINE:
            Underline();
            break;
          case NOTAGS_FORCE_NEWLINE:
          case TABLE_FORCE_NEWLINE:
          case LIST_FORCE_NEWLINE:
          case TITLE_FORCE_NEWLINE:
          case FORCE_NEWLINE:
            ForceNewline();
            break;
          case TITLE:
            Title();
            break;
          case LIST:
            List();
            break;
          case HRULE:
            Hrule();
            break;
          case TABLE:
          case TABLE_TABLE:
            Table();
            break;
          default:
            jj_la1[2] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case BOLD:
        case ITALIC:
        case UNDERLINE:
        case NOTAGS_BOLD:
        case NOTAGS_ITALIC:
        case NOTAGS_UNDERLINE:
        case NOTAGS_FORCE_NEWLINE:
        case NOTAGS_ANY_CHAR:
        case HRULE:
        case TABLE:
        case TABLE_TABLE:
        case TABLE_BOLD:
        case TABLE_ITALIC:
        case TABLE_UNDERLINE:
        case TABLE_FORCE_NEWLINE:
        case TABLE_ANY_CHAR:
        case LIST:
        case LIST_BOLD:
        case LIST_ITALIC:
        case LIST_UNDERLINE:
        case LIST_FORCE_NEWLINE:
        case TITLE:
        case TITLE_BOLD:
        case TITLE_ITALIC:
        case TITLE_UNDERLINE:
        case TITLE_FORCE_NEWLINE:
        case TITLE_ANY_CHAR:
        case START_PLAIN:
        case FORCE_NEWLINE:
        case ANY_CHAR:
          ;
          break;
        default:
          jj_la1[3] = jj_gen;
          break label_2;
        }
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void Bold() throws ParseException {
               /*@bgen(jjtree) Bold */
  SimpleNode jjtn000 = new SimpleNode(JJTBOLD);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TITLE_BOLD:
        jj_consume_token(TITLE_BOLD);
        break;
      case BOLD:
        jj_consume_token(BOLD);
        break;
      case NOTAGS_BOLD:
        jj_consume_token(NOTAGS_BOLD);
        break;
      case LIST_BOLD:
        jj_consume_token(LIST_BOLD);
        break;
      case TABLE_BOLD:
        jj_consume_token(TABLE_BOLD);
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NOTAGS_FORCE_NEWLINE:
        case NOTAGS_ANY_CHAR:
        case TABLE_FORCE_NEWLINE:
        case TABLE_ANY_CHAR:
        case LIST_FORCE_NEWLINE:
        case TITLE_FORCE_NEWLINE:
        case TITLE_ANY_CHAR:
        case FORCE_NEWLINE:
        case ANY_CHAR:
          ;
          break;
        default:
          jj_la1[5] = jj_gen;
          break label_3;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NOTAGS_ANY_CHAR:
        case TABLE_ANY_CHAR:
        case TITLE_ANY_CHAR:
        case ANY_CHAR:
          Text();
          break;
        case NOTAGS_FORCE_NEWLINE:
        case TABLE_FORCE_NEWLINE:
        case LIST_FORCE_NEWLINE:
        case TITLE_FORCE_NEWLINE:
        case FORCE_NEWLINE:
          ForceNewline();
          break;
        default:
          jj_la1[6] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ITALIC:
      case UNDERLINE:
      case NOTAGS_ITALIC:
      case NOTAGS_UNDERLINE:
      case TABLE_ITALIC:
      case TABLE_UNDERLINE:
      case LIST_ITALIC:
      case LIST_UNDERLINE:
      case TITLE_ITALIC:
      case TITLE_UNDERLINE:
        if (jj_2_3(2)) {
          Italic();
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case UNDERLINE:
          case NOTAGS_UNDERLINE:
          case TABLE_UNDERLINE:
          case LIST_UNDERLINE:
          case TITLE_UNDERLINE:
            Underline();
            break;
          default:
            jj_la1[7] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        break;
      default:
        jj_la1[8] = jj_gen;
        ;
      }
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NOTAGS_FORCE_NEWLINE:
        case NOTAGS_ANY_CHAR:
        case TABLE_FORCE_NEWLINE:
        case TABLE_ANY_CHAR:
        case LIST_FORCE_NEWLINE:
        case TITLE_FORCE_NEWLINE:
        case TITLE_ANY_CHAR:
        case FORCE_NEWLINE:
        case ANY_CHAR:
          ;
          break;
        default:
          jj_la1[9] = jj_gen;
          break label_4;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NOTAGS_ANY_CHAR:
        case TABLE_ANY_CHAR:
        case TITLE_ANY_CHAR:
        case ANY_CHAR:
          Text();
          break;
        case NOTAGS_FORCE_NEWLINE:
        case TABLE_FORCE_NEWLINE:
        case LIST_FORCE_NEWLINE:
        case TITLE_FORCE_NEWLINE:
        case FORCE_NEWLINE:
          ForceNewline();
          break;
        default:
          jj_la1[10] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TITLE_BOLD:
        jj_consume_token(TITLE_BOLD);
        break;
      case NOTAGS_BOLD:
        jj_consume_token(NOTAGS_BOLD);
        break;
      case LIST_BOLD:
        jj_consume_token(LIST_BOLD);
        break;
      case TABLE_BOLD:
        jj_consume_token(TABLE_BOLD);
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void Italic() throws ParseException {
                 /*@bgen(jjtree) Italic */
  SimpleNode jjtn000 = new SimpleNode(JJTITALIC);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TITLE_ITALIC:
        jj_consume_token(TITLE_ITALIC);
        break;
      case ITALIC:
        jj_consume_token(ITALIC);
        break;
      case NOTAGS_ITALIC:
        jj_consume_token(NOTAGS_ITALIC);
        break;
      case LIST_ITALIC:
        jj_consume_token(LIST_ITALIC);
        break;
      case TABLE_ITALIC:
        jj_consume_token(TABLE_ITALIC);
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NOTAGS_FORCE_NEWLINE:
        case NOTAGS_ANY_CHAR:
        case TABLE_FORCE_NEWLINE:
        case TABLE_ANY_CHAR:
        case LIST_FORCE_NEWLINE:
        case TITLE_FORCE_NEWLINE:
        case TITLE_ANY_CHAR:
        case FORCE_NEWLINE:
        case ANY_CHAR:
          ;
          break;
        default:
          jj_la1[13] = jj_gen;
          break label_5;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NOTAGS_ANY_CHAR:
        case TABLE_ANY_CHAR:
        case TITLE_ANY_CHAR:
        case ANY_CHAR:
          Text();
          break;
        case NOTAGS_FORCE_NEWLINE:
        case TABLE_FORCE_NEWLINE:
        case LIST_FORCE_NEWLINE:
        case TITLE_FORCE_NEWLINE:
        case FORCE_NEWLINE:
          ForceNewline();
          break;
        default:
          jj_la1[14] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOLD:
      case UNDERLINE:
      case NOTAGS_BOLD:
      case NOTAGS_UNDERLINE:
      case TABLE_BOLD:
      case TABLE_UNDERLINE:
      case LIST_BOLD:
      case LIST_UNDERLINE:
      case TITLE_BOLD:
      case TITLE_UNDERLINE:
        if (jj_2_4(2)) {
          Bold();
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case UNDERLINE:
          case NOTAGS_UNDERLINE:
          case TABLE_UNDERLINE:
          case LIST_UNDERLINE:
          case TITLE_UNDERLINE:
            Underline();
            break;
          default:
            jj_la1[15] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        break;
      default:
        jj_la1[16] = jj_gen;
        ;
      }
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NOTAGS_FORCE_NEWLINE:
        case NOTAGS_ANY_CHAR:
        case TABLE_FORCE_NEWLINE:
        case TABLE_ANY_CHAR:
        case LIST_FORCE_NEWLINE:
        case TITLE_FORCE_NEWLINE:
        case TITLE_ANY_CHAR:
        case FORCE_NEWLINE:
        case ANY_CHAR:
          ;
          break;
        default:
          jj_la1[17] = jj_gen;
          break label_6;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NOTAGS_ANY_CHAR:
        case TABLE_ANY_CHAR:
        case TITLE_ANY_CHAR:
        case ANY_CHAR:
          Text();
          break;
        case NOTAGS_FORCE_NEWLINE:
        case TABLE_FORCE_NEWLINE:
        case LIST_FORCE_NEWLINE:
        case TITLE_FORCE_NEWLINE:
        case FORCE_NEWLINE:
          ForceNewline();
          break;
        default:
          jj_la1[18] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TITLE_ITALIC:
        jj_consume_token(TITLE_ITALIC);
        break;
      case NOTAGS_ITALIC:
        jj_consume_token(NOTAGS_ITALIC);
        break;
      case LIST_ITALIC:
        jj_consume_token(LIST_ITALIC);
        break;
      case TABLE_ITALIC:
        jj_consume_token(TABLE_ITALIC);
        break;
      default:
        jj_la1[19] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }
